--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -35,7 +35,8 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  text-align: center; 
+  text-align: center;
+  background-color: #318ee6; 
 }
 
 button:hover {
